# the-book

./: .gitignore
add/: Cargo.toml
add/add-one/: Cargo.toml
add/add-one/src/: lib.rs
add/add-two/src/: lib.rs
add/adder/: Cargo.toml
add/adder/src/: main.rs
adder/: Cargo.toml
adder/src/: lib.rs
adder/tests/: integration_test.rs
adder/tests/common/: local.rs  mod.rs
art/: Cargo.toml
art/src/: lib.rs  main.rs
branches/: Cargo.toml
branches/src/: main.rs
closures/: Cargo.toml
closures/src/: main.rs
collections/: Cargo.toml
collections/src/: exercise.rs  hashmap.rs  main.rs  string.rs  vector.rs
crates/: Cargo.toml
crates/src/: lib.rs
enums/: Cargo.toml
enums/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs  panic.rs
functions/: Cargo.toml
functions/src/: main.rs
generics_traits_lifetimes/: Cargo.toml
generics_traits_lifetimes/src/: aggregator.rs  generics.rs  lifetimes.rs  main.rs  traits.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_world/: main
iterators/: Cargo.toml
iterators/src/: main.rs  test.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
modules/: Cargo.toml
modules/src/: front_of_house.rs  lib.rs  main.rs
modules/src/restaurant/: back_of_house.rs  (+1 more)
ownership/: Cargo.toml
ownership/src/: main.rs
references/: Cargo.toml
references/src/: main.rs
smart_pointers/src/: boxes.rs  main.rs  rc.rs  ref_cycle.rs  refcell.rs
structs/: Cargo.toml
structs/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
(+1 files in other folders)
