[package]
name = "art"
version = "0.1.0"
authors = ["denglitong <denglitong@xiaomi.com>"]
edition = "2018"
description = "A library for modeling artistic concepts."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
