[package]
name = "adder"
version = "0.1.0"
authors = ["denglitong <litongdeng@gmail.com>"]
edition = "2018"
default-run = "adder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# we need to add a path dependency first to refer local crate
add-one = { path = "../add-one" }
add-two = { path = "../add-two" }
rand = "0.7"